pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingresses-with-canary-and-multiple-paths.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-canary-and-multiple-paths
  namespace: default

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /data/
            pathType: Prefix
            backend:
              service:
                name: whoami-b
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-cookie: "foo.bar"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /data/
            pathType: Prefix
            backend:
              service:
                name: whoami-b
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary
                port:
                  number: 80
